[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/Bottom UI v 2.png" type="Texture" id=1]
[ext_resource path="res://UI/Backgrounds/background 2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/top_ui.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/grid.gd" type="Script" id=4]
[ext_resource path="res://Scripts/ice_holder.gd" type="Script" id=5]
[ext_resource path="res://Scripts/lock_holder.gd" type="Script" id=6]
[ext_resource path="res://Scripts/concrete_holder.gd" type="Script" id=7]
[ext_resource path="res://Scripts/slime_holder.gd" type="Script" id=8]
[ext_resource path="res://Scenes/game_window.gd" type="Script" id=9]
[ext_resource path="res://Scenes/GameOverScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Sinker.tscn" type="PackedScene" id=11]

[node name="game_window" type="Node2D"]
position = Vector2( -2, 0 )
script = ExtResource( 9 )

[node name="background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top_ui" parent="." instance=ExtResource( 3 )]

[node name="bottom_ui" type="TextureRect" parent="."]
margin_top = 926.0
margin_right = 576.0
margin_bottom = 1018.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grid" type="Node2D" parent="."]
script = ExtResource( 4 )
width = 8
height = 10
x_start = 64
y_start = 800
piece_offset = 64
piece_value = 10
sinker_piece = ExtResource( 11 )
sinkers_in_scene = true
max_sinkers = 2
current_counter_value = 10
is_moves = true
empty_spaces = PoolVector2Array( 0, 0, 7, 0, 0, 9, 7, 9, 3, 4, 4, 4, 3, 5, 4, 5 )
ice_spaces = PoolVector2Array( 3, 0, 4, 0, 3, 9, 4, 9 )
lock_spaces = PoolVector2Array( 1, 4, 5, 4, 5, 5, 5, 8 )
concrete_spaces = PoolVector2Array( 2, 2, 2, 7, 5, 2, 5, 7 )
slime_spaces = PoolVector2Array( 7, 4, 7, 5 )

[node name="Timer" type="Timer" parent="grid"]

[node name="ice_holder" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="lock_holder" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="concrete_holder" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="slime_holder" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GameOverScreen" parent="." instance=ExtResource( 10 )]
[connection signal="damage_concrete" from="grid" to="concrete_holder" method="_on_grid_damage_concrete"]
[connection signal="damage_ice" from="grid" to="ice_holder" method="_on_grid_damage_ice"]
[connection signal="damage_lock" from="grid" to="lock_holder" method="_on_grid_damage_lock"]
[connection signal="damage_slime" from="grid" to="slime_holder" method="_on_grid_damage_slime"]
[connection signal="game_over" from="grid" to="GameOverScreen" method="_on_grid_game_over"]
[connection signal="make_concrete" from="grid" to="concrete_holder" method="_on_grid_make_concrete"]
[connection signal="make_ice" from="grid" to="ice_holder" method="_on_grid_make_ice"]
[connection signal="make_locks" from="grid" to="lock_holder" method="_on_grid_make_locks"]
[connection signal="make_slime" from="grid" to="slime_holder" method="_on_grid_make_slime"]
[connection signal="update_counter" from="grid" to="top_ui" method="_on_grid_update_counter"]
[connection signal="update_score" from="grid" to="top_ui" method="_on_grid_update_score"]
[connection signal="timeout" from="grid/Timer" to="grid" method="_on_Timer_timeout"]
[connection signal="remove_lock" from="lock_holder" to="grid" method="_on_lock_holder_remove_lock"]
[connection signal="remove_concrete" from="concrete_holder" to="grid" method="_on_concrete_holder_remove_concrete"]
[connection signal="remove_slime" from="slime_holder" to="grid" method="_on_slime_holder_remove_slime"]
[connection signal="slime_damaged" from="slime_holder" to="grid" method="_on_slime_holder_slime_damaged"]
[connection signal="timeout" from="destroy_timer" to="grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timer_timeout"]
